# PotreeConverter

./: README.md  compile_commands.json  converter-test.js
PotreeConverter/: CMakeLists.txt
PotreeConverter/include/: PotreeConverter.h  PotreeException.h  PotreeJSConverter.hpp
PotreeConverter/resources/: prepare-fs.js
PotreeConverter/src/: BINPointReader.cpp  GridCell.cpp  PotreeConverter.cpp  PotreeJSConverter.cpp  PotreeWriter.cpp  SparseGrid.cpp  main.cpp  stuff.cpp
